data/diff_tests/wasmtime/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1265.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\8a\80\80\80\00\01\01\42\04\66\75\6e"
    "\63\00\00\03\82\80\80\80\00\01\00\0a\94\80\80\80"
    "\00\01\8e\80\80\80\00\00\03\7f\03\7f\10\00\0c\01"
    "\0b\0c\01\0b\0b"
  )
""
)